--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						</header>
 						<div class="content">
 							<p><strong>The classes I have</strong> taken include: Biology 395, Chemistry 129, and Calculus 16020. Attached is a CV: 
-<a href="Kreesha Saha - Resume 2023.pdf">Kreesha Saha - Resume 2023</a>
+<strong><a href="Kreesha Saha - Resume 2023.pdf">Kreesha Saha - Resume 2023</a></strong>
 </p>
 							
 						</div>
