--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 						</header>
 						<div class="content">
 							<p><strong>I am an undergraduate</strong> student at Purdue University studying Biology and Computer Science. </p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<a href = "Kreesha Saha - Futurum Careers.pdf"><span class="image main"><img src="images/pic02.jpg" alt="" />
+							</span>
+							</a>
 						</div>
 					</section>
 
